--- a/index.html
+++ b/index.html
@@ -1,243 +1,211 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Карта лагеря — кликабельные зоны</title>
-  <style>
-    :root { --brand:#CF2C02; --brand2:#FFBA08; --brand3:#E85D04; }
-    * { box-sizing:border-box }
-    html,body{ margin:0; background:#fff; font-family:system-ui, Arial, sans-serif; }
-    .map{ max-width:1200px; margin:0 auto; }
-    svg{ display:block; width:100%; height:auto; }
-    image{ pointer-events:none; } /* клики проходят сквозь */
-
-    /* Невидимые, но кликабельные зоны */
-    .hotspot{
-      fill:transparent; stroke:transparent; stroke-width:2;
-      cursor:pointer; vector-effect:non-scaling-stroke;
-      transform-box: fill-box; transform-origin: center;
-    }
-
-    /* Ripple */
-    .ripple{
-      fill:none; stroke:var(--brand); stroke-width:3; opacity:.6;
-      animation:ripple .45s ease-out forwards; pointer-events:none;
-    }
-    @keyframes ripple{
-      from{ r:0; opacity:.6 } to{ r:70; opacity:0 }
-    }
-
-    /* Искры */
-    .spark{
-      fill: currentColor; opacity:.9;
-      animation: spark .6s ease-out forwards; pointer-events:none;
-    }
-    @keyframes spark{
-      from{ transform: translate(0,0) scale(1); opacity:.9 }
-      to  { transform: translate(var(--dx),var(--dy)) scale(.4); opacity:0 }
-    }
-
-    /* Убираем синий хайлайт на мобилках */
-    a, svg, image, .hotspot{ -webkit-tap-highlight-color: transparent; outline: none; }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Карта — интерактивные локации</title>
+<style>
+  :root{
+    --ui-bg: #0b0c10;
+    --ui-fg: #e6e6e6;
+    --hl: #ff7300;
+  }
+  html,body{height:100%;margin:0;background:#111;color:#eee;font:16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif}
+  .wrap{max-width:1200px;margin:0 auto;padding:10px 12px 28px}
+  header{display:flex;gap:12px;align-items:center;justify-content:space-between;margin:8px 0 12px}
+  header .title{font-size:18px;font-weight:700;letter-spacing:.3px}
+  header .tips{opacity:.85;font-size:14px}
+  .board{
+    position:relative;
+    background:#000;
+    border-radius:14px;
+    overflow:hidden;
+    box-shadow:0 15px 40px rgba(0,0,0,.35);
+  }
+  .board .img{
+    display:block;width:100%;height:auto;vertical-align:top;user-select:none;pointer-events:none;
+    background:#000;
+  }
+  /* SVG над картой */
+  svg{display:block;width:100%;height:auto}
+  a{cursor:pointer}
+  .hotspot{
+    fill:rgba(255,255,255,0); /* кликабельная, но невидимая по умолчанию */
+    stroke:transparent; stroke-width:2;
+    transition:fill .18s ease, stroke .18s ease;
+  }
+  a:focus .hotspot,
+  a:hover .hotspot{
+    fill:rgba(255,255,255,.06);
+    stroke:rgba(255,255,255,.25);
+  }
+  /* Debug-режим, вкл/выкл клавишей D */
+  .hotspot.debug{
+    fill: rgba(255, 165, 0, .18);
+    stroke: var(--hl);
+    stroke-width: 2.5;
+  }
+  /* Подписи (если нужны поверх) */
+  .label{
+    font: 600 14px/1.1 system-ui, sans-serif;
+    fill:#fff; pointer-events:none; text-shadow:0 1px 0 rgba(0,0,0,.4);
+  }
+  footer{opacity:.8;margin-top:12px;font-size:13px}
+  .kbd{display:inline-block;padding:.1em .4em;border:1px solid #666;border-bottom-color:#444;border-radius:6px;background:#1a1d22}
+  .muted{opacity:.7}
+</style>
 </head>
 <body>
-  <div class="map">
-    <svg id="camp" viewBox="0 0 1536 1156" preserveAspectRatio="xMidYMid meet" aria-label="Интерактивная карта лагеря">
-      <image href="camp-map.jpg" width="1536" height="1156" />
+<div class="wrap">
+  <header>
+    <div class="title">Интерактивная карта</div>
+    <div class="tips">
+      <span class="kbd">D</span> — режим разметки,&nbsp;
+      <span class="kbd">Ctrl</span>+клик — вывести <span class="muted">x,y</span> в консоль
+    </div>
+  </header>
 
-      <!-- СТОЛОВАЯ (звук: kitchen.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696518"
-         target="_blank" rel="noopener" aria-label="Столовая" data-sound="kitchen">
-        <title>Столовая</title>
-        <rect class="hotspot" data-type="label" x="183.61602783203125" y="366.9920349121094" width="332.9919738769531" height="92.01593017578125" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="345.6000061035156,198.80001831054688 570.6000061035156,198.80001831054688 730.6240234375,315.64801025390625 356.864013671875,385.2799987792969 315.6000061035156,313.8000183105469"/>
+  <div class="board">
+    <!-- Фоновая картинка карты: замените на вашу -->
+    <img class="img" src="camp-map.jpg" alt="Карта" id="mapImg"/>
+
+    <!-- Слой SVG с кликабельными зонами -->
+    <!-- width/height SVG должны соответствовать реальному размеру изображения карты -->
+    <svg id="mapSvg" viewBox="0 0 1600 1000" preserveAspectRatio="xMidYMid meet" aria-label="Карта — кликабельные зоны">
+      <!-- Примерный набор зон. Подгоняйте координаты (points/x/y/width/height). -->
+      <!-- КУХНЯ -->
+      <a href="https://example.com/kitchen" target="_blank" rel="noopener" data-sound="kitchen" aria-label="Кухня">
+        <rect class="hotspot" x="180" y="740" width="220" height="110" rx="16"></rect>
+        <!-- <text class="label" x="190" y="730">Кухня</text> -->
       </a>
 
-      <!-- СПОРТЗАЛ (звук: sport.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696520"
-         target="_blank" rel="noopener" aria-label="Спортивный зал" data-sound="sport">
-        <title>Спортивный зал</title>
-        <rect class="hotspot" data-type="label" x="621.2960205078125" y="528.8800659179688" width="375" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="584.1919555664062,388.35198974609375 782.8479614257812,361.7279968261719 829.9519653320312,530.6880493164062 580.0960083007812,577.7919921875 502.27197265625,492.79998779296875"/>
+      <!-- СПОРТ -->
+      <a href="https://example.com/sport" target="_blank" rel="noopener" data-sound="sport" aria-label="Спортплощадка">
+        <polygon class="hotspot" points="340,520 520,510 540,600 350,615"></polygon>
       </a>
 
-      <!-- ДИСКОТЕКА (звук: tell.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696522"
-         target="_blank" rel="noopener" aria-label="Дискотека" data-sound="disco">
-        <title>Дискотека</title>
-        <rect class="hotspot" data-type="label" x="956.927978515625" y="357.1359558105469" width="402.4161376953125" height="92.65603637695312" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="987.64794921875,189.6959991455078 1236.47998046875,234.75201416015625 1117.6959228515625,497.91998291015625 887.2960205078125,412.9280090332031"/>
+      <!-- ДИСКО -->
+      <a href="https://example.com/disco" target="_blank" rel="noopener" data-sound="disco" aria-label="Диско">
+        <rect class="hotspot" x="1070" y="190" width="190" height="100" rx="14"></rect>
       </a>
 
-      <!-- ПАЛАТЫ (звук: rooms.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696523"
-         target="_blank" rel="noopener" aria-label="Палаты" data-sound="rooms">
-        <title>Палаты</title>
-        <rect class="hotspot" data-type="label" x="110.70404052734375" y="649.8399658203125" width="330" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="166.33599853515625,489.31195068359375 406.33599853515625,489.31195068359375 592.3839721679688,638.2080078125 127.48798370361328,641.2799682617188"/>
+      <!-- КОМНАТЫ -->
+      <a href="https://example.com/rooms" target="_blank" rel="noopener" data-sound="rooms" aria-label="Комнаты">
+        <polygon class="hotspot" points="780,740 960,735 980,845 795,850"></polygon>
       </a>
 
-      <!-- БЕСЕДКА (звук: birds.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696533"
-         target="_blank" rel="noopener" aria-label="Беседка" data-sound="birds">
-        <title>Беседка</title>
-        <rect class="hotspot" data-type="label" x="116.46401977539062" y="1011.1680908203125" width="300" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="182,884 267.7760009765625,831.7440185546875 409.0879821777344,964.864013671875 185.85598754882812,1006.8480224609375"/>
+      <!-- ПТИЦЫ -->
+      <a href="https://example.com/birds" target="_blank" rel="noopener" data-sound="birds" aria-label="Птицы">
+        <rect class="hotspot" x="1290" y="320" width="160" height="95" rx="14"></rect>
       </a>
 
-      <!-- КИНОЗАЛ (звук: cinema.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696534"
-         target="_blank" rel="noopener" aria-label="Кинозал" data-sound="cinema">
-        <title>Кинозал</title>
-        <rect class="hotspot" data-type="label" x="1053.887939453125" y="622.8639526367188" width="331" height="88" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="1145.3441162109375,482.55999755859375 1329.6640625,461.0559997558594 1338.8800048828125,628.9920043945312 1137.50390625,617.2160034179688"/>
+      <!-- КИНО -->
+      <a href="https://example.com/cinema" target="_blank" rel="noopener" data-sound="cinema" aria-label="Кинотеатр">
+        <polygon class="hotspot" points="250,290 390,285 410,360 260,370"></polygon>
       </a>
 
-      <!-- КОМНАТА ОТДЫХА (звук: relax.mp3, 3 сек) -->
-      <a href="https://my.walk-walk.ru/teach/control/stream/view/id/934696535"
-         target="_blank" rel="noopener" aria-label="Комната отдыха" data-sound="relax">
-        <title>Комната отдыха</title>
-        <rect class="hotspot" data-type="label" x="886.0640869140625" y="897.280029296875" width="472.2718505859375" height="162.0159912109375" rx="16"/>
-        <polygon class="hotspot" data-type="house" points="969.072021484375,783.7760009765625 1253.887939453125,805.1199951171875 1263.10400390625,954.6240234375 947.7119750976562,960.7680053710938"/>
+      <!-- РЕЛАКС -->
+      <a href="https://example.com/relax" target="_blank" rel="noopener" data-sound="relax" aria-label="Зона отдыха">
+        <rect class="hotspot" x="520" y="280" width="170" height="95" rx="14"></rect>
       </a>
 
-      <!-- КОСТЁР (звук: fire.mp3, 3 сек) — поднят вверх на ~25px -->
-      <a href="#" aria-label="Костёр" data-sound="fire">
-        <title>Костёр</title>
-        <rect class="hotspot" data-type="label" x="705" y="720" width="260" height="80" rx="16"/>
-        <polygon class="hotspot" data-type="fire"
-                 points="760,675 790,625 820,675 845,665 835,695 855,715 820,720 805,745 785,720 750,710"/>
+      <!-- КОСТЁР -->
+      <a href="https://example.com/fire" target="_blank" rel="noopener" data-sound="fire" aria-label="Костёр">
+        <polygon class="hotspot" points="1120,620 1210,610 1235,670 1130,685"></polygon>
       </a>
-      <!-- УТКИ (звук: ducks.mp3, 3 сек) — правее Комнаты отдыха, справа снизу -->
-<a href="#" aria-label="Утки" data-sound="ducks">
-  <title>Утки</title>
-  <!-- Подгоните при необходимости: cx (вправо/влево), cy (вверх/вниз) -->
-  <ellipse class="hotspot" cx="1380" cy="1000" rx="110" ry="70"/>
-</a>
-      <!-- слой для эффектов -->
-      <g id="fx"></g>
+
+      <!-- УТКИ -->
+      <a href="https://example.com/ducks" target="_blank" rel="noopener" data-sound="ducks" aria-label="Утки">
+        <rect class="hotspot" x="140" y="530" width="170" height="95" rx="14"></rect>
+      </a>
+
+      <!-- САНАТОРИЙ (НОВАЯ ЛОКАЦИЯ) -->
+      <a href="https://example.com/sanatorium" target="_blank" rel="noopener" data-sound="sanatorium" aria-label="Санаторий">
+        <!-- Табличка -->
+        <rect class="hotspot" x="1180" y="870" width="300" height="88" rx="16"></rect>
+        <!-- Контур здания -->
+        <polygon class="hotspot" points="1205,780 1335,770 1370,845 1215,880"></polygon>
+      </a>
     </svg>
   </div>
 
-  <script>
-    const svg  = document.getElementById('camp');
-    const fx   = document.getElementById('fx');
-    const colors = ['var(--brand)','var(--brand2)','var(--brand3)'];
+  <footer>
+    Если картинка карты другого размера — подгоните <code>viewBox</code> у SVG и координаты зон.
+  </footer>
+</div>
 
-    /* ====== АУДИО ====== */
-    const soundFiles = {
-      kitchen: 'kitchen.mp3',
-      sport:   'sport.mp3',
-      disco:   'tell.mp3',
-      rooms:   'rooms.mp3',
-      birds:   'birds.mp3',
-      cinema:  'cinema.mp3',
-      relax:   'relax.mp3',
-      fire:    'fire.mp3',
-      ducks:   'ducks.mp3'
-    };
+<script>
+/* =================== НАСТРОЙКИ АУДИО =================== */
+const soundFiles = {
+  kitchen:    'kitchen.mp3',
+  sport:      'sport.mp3',
+  disco:      'tell.mp3',
+  rooms:      'rooms.mp3',
+  birds:      'birds.mp3',
+  cinema:     'cinema.mp3',
+  relax:      'relax.mp3',
+  fire:       'fire.mp3',
+  ducks:      'ducks.mp3',
+  sanatorium: 'sanatorium.mp3' // новая локация
+};
 
-    // создаём аудио-объекты
-    const sounds = {};
-    for (const key in soundFiles){
-      const a = new Audio(soundFiles[key]);
-      a.preload = 'auto';
-      a.volume = 0.9;
-      sounds[key] = a;
+// Предзагрузка аудио
+const sounds = {};
+for (const [key, file] of Object.entries(soundFiles)) {
+  const a = new Audio(file);
+  a.preload = 'auto';
+  sounds[key] = a;
+}
+
+/* =================== ЛОГИКА КАРТЫ =================== */
+const svg = document.getElementById('mapSvg');
+const links = svg.querySelectorAll('a[data-sound]');
+let debugOn = false;
+
+// Включение/выключение режима разметки (D)
+document.addEventListener('keydown', (e)=>{
+  if (e.key.toLowerCase() === 'd'){
+    debugOn = !debugOn;
+    svg.querySelectorAll('.hotspot').forEach(el=>{
+      el.classList.toggle('debug', debugOn);
+    });
+  }
+});
+
+// Ctrl+клик по карте → вывести координаты точки под курсором
+svg.addEventListener('click', (e)=>{
+  if (!e.ctrlKey) return;
+  e.preventDefault();
+  const pt = (()=>{
+    const p = svg.createSVGPoint();
+    const src = e.touches ? e.touches[0] : e;
+    p.x = src.clientX; p.y = src.clientY;
+    return p.matrixTransform(svg.getScreenCTM().inverse());
+  })();
+  console.log(`x=${pt.x.toFixed(1)}, y=${pt.y.toFixed(1)}`);
+});
+
+// Воспроизведение звука при клике по зоне
+links.forEach(a=>{
+  a.addEventListener('click', (e)=>{
+    // Звук: 3 секунды, без блокировки перехода по ссылке (откроется в новой вкладке)
+    const key = a.getAttribute('data-sound');
+    const audio = sounds[key];
+    if (audio){
+      try{
+        audio.currentTime = 0;
+        audio.play().catch(()=>{ /* игнорируем авто-блокировку браузера */ });
+        setTimeout(()=>{ try{ audio.pause(); }catch(_){} }, 3000);
+      }catch(_){}
     }
+  });
+});
 
-    // iOS/webkit: разблокировать аудио на первый жест
-    const unlock = () => {
-      Object.values(sounds).forEach(a => {
-        try { a.play().then(()=>a.pause()).catch(()=>{}); } catch(_){}
-      });
-    };
-    document.addEventListener('pointerdown', unlock, { once:true });
-
-    // ограничение звучания до 3 секунд для всех звуков
-    const MAX_PLAY_MS = 3000;
-    const pauseTimers = {};
-
-    function playSound(key){
-      const a = sounds[key];
-      if(!a) return;
-
-      try {
-        // сбрасываем предыдущий автопаузер для этого звука
-        if (pauseTimers[key]) clearTimeout(pauseTimers[key]);
-
-        // быстрый перезапуск при повторных кликах
-        a.currentTime = 0;
-        a.play().catch(()=>{});
-
-        // автопауза через 3 секунды
-        pauseTimers[key] = setTimeout(()=>{
-          a.pause();
-          a.currentTime = 0;
-        }, MAX_PLAY_MS);
-      } catch(e){}
-    }
-
-    /* ====== ЭФФЕКТЫ ====== */
-    function svgPoint(evt){
-      const pt = svg.createSVGPoint();
-      const e = evt.touches ? evt.touches[0] : evt;
-      pt.x = e.clientX; pt.y = e.clientY;
-      return pt.matrixTransform(svg.getScreenCTM().inverse());
-    }
-
-    function ripple(x,y){
-      const c = document.createElementNS('http://www.w3.org/2000/svg','circle');
-      c.setAttribute('class','ripple');
-      c.setAttribute('cx', x); c.setAttribute('cy', y); c.setAttribute('r', 0);
-      fx.appendChild(c);
-      setTimeout(()=>c.remove(), 520);
-    }
-
-    function sparks(x,y,count=12){
-      for(let i=0;i<count;i++){
-        const dx = (Math.random()*120-60), dy=(Math.random()*120-60);
-        const s = document.createElementNS('http://www.w3.org/2000/svg','circle');
-        s.setAttribute('class','spark');
-        s.setAttribute('cx', x); s.setAttribute('cy', y);
-        s.setAttribute('r', 3 + Math.random()*2);
-        s.style.setProperty('--dx', dx+'px');
-        s.style.setProperty('--dy', dy+'px');
-        s.style.color = colors[Math.floor(Math.random()*colors.length)];
-        fx.appendChild(s);
-        setTimeout(()=>s.remove(), 700);
-      }
-    }
-
-    /* ====== КЛИК ====== */
-    svg.addEventListener('click', (e)=>{
-      const anchor = e.target.closest('a');
-      if(!anchor) return;
-      e.preventDefault();
-
-      // вибрация
-      if(navigator.vibrate) navigator.vibrate(15);
-
-      // эффекты
-      const p = svgPoint(e);
-      ripple(p.x, p.y);
-      sparks(p.x, p.y, 14);
-
-      // звук по data-sound
-      const key = anchor.dataset.sound;
-      if(key) playSound(key);
-
-      // переход (если есть валидный href и не "#")
-      const href = anchor.getAttribute('href');
-      const target = anchor.getAttribute('target') || '_self';
-      setTimeout(()=>{
-        if(!href || href === '#') return;
-        if(target==='_blank'){ window.open(href,'_blank','noopener'); }
-        else{ location.href = href; }
-      }, 320);
-    }, {passive:false});
-  </script>
+/* ====== ХЕЛПЕР: если фон у карты нестандартный ======
+   Если заменили изображение и оно другого размера,
+   подгоните viewBox у SVG под реальный размер пикселей карты.
+   Например, если карта 1920x1080 → viewBox="0 0 1920 1080".
+======================================================= */
+</script>
 </body>
-          </html>
+</html>
