--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <style>
   html,body{height:100%;margin:0;background:#111;color:#eee;font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
   .wrap{max-width:1200px;margin:0 auto;padding:10px 12px 28px}
-  .board{
-    position:relative;background:#000;border-radius:14px;overflow:hidden;
-    box-shadow:0 15px 40px rgba(0,0,0,.35);
-  }
+  .board{position:relative;background:#000;border-radius:14px;overflow:hidden;box-shadow:0 15px 40px rgba(0,0,0,.35)}
   .board .img{display:block;width:100%;height:auto;vertical-align:top;user-select:none;pointer-events:none}
   svg{display:block;width:100%;height:auto}
   a{cursor:pointer;text-decoration:none}
@@ -25,78 +22,57 @@
 <body>
 <div class="wrap">
   <div class="board">
-    <!-- Фоновая картинка карты (замените путь при необходимости) -->
     <img class="img" src="camp-map.jpg" alt="Карта"/>
 
-    <!-- Слой кликабельных зон -->
-    <!-- Если ваша карта другого размера, подгоните значения viewBox -->
     <svg viewBox="0 0 1600 1000" preserveAspectRatio="xMidYMid meet" aria-label="Карта — кликабельные зоны">
-      <!-- КУХНЯ -->
-      <a href="https://example.com/kitchen" target="_blank" rel="noopener" data-sound="kitchen" aria-label="Кухня">
-        <rect class="hotspot" x="180" y="740" width="220" height="110" rx="16"></rect>
+      <a href="kitchen.html" target="_blank" rel="noopener" data-sound="kitchen" aria-label="Столовая">
+        <rect class="hotspot" x="250" y="350" width="180" height="90" rx="16"></rect>
       </a>
 
-      <!-- СПОРТ -->
-      <a href="https://example.com/sport" target="_blank" rel="noopener" data-sound="sport" aria-label="Спортплощадка">
-        <polygon class="hotspot" points="340,520 520,510 540,600 350,615"></polygon>
+      <a href="sport.html" target="_blank" rel="noopener" data-sound="sport" aria-label="Спортзал">
+        <rect class="hotspot" x="500" y="400" width="150" height="80" rx="16"></rect>
       </a>
 
-      <!-- ДИСКО -->
-      <a href="https://example.com/disco" target="_blank" rel="noopener" data-sound="disco" aria-label="Диско">
-        <rect class="hotspot" x="1070" y="190" width="190" height="100" rx="14"></rect>
+      <a href="disco.html" target="_blank" rel="noopener" data-sound="disco" aria-label="Дискотека">
+        <rect class="hotspot" x="1050" y="300" width="160" height="90" rx="14"></rect>
       </a>
 
-      <!-- КОМНАТЫ -->
-      <a href="https://example.com/rooms" target="_blank" rel="noopener" data-sound="rooms" aria-label="Комнаты">
-        <polygon class="hotspot" points="780,740 960,735 980,845 795,850"></polygon>
+      <a href="rooms.html" target="_blank" rel="noopener" data-sound="rooms" aria-label="Комнаты отдыха">
+        <rect class="hotspot" x="900" y="650" width="180" height="90" rx="14"></rect>
       </a>
 
-      <!-- ПТИЦЫ -->
-      <a href="https://example.com/birds" target="_blank" rel="noopener" data-sound="birds" aria-label="Птицы">
-        <rect class="hotspot" x="1290" y="320" width="160" height="95" rx="14"></rect>
+      <a href="cinema.html" target="_blank" rel="noopener" data-sound="cinema" aria-label="Кинозал">
+        <rect class="hotspot" x="1080" y="480" width="130" height="80" rx="14"></rect>
       </a>
 
-      <!-- КИНО -->
-      <a href="https://example.com/cinema" target="_blank" rel="noopener" data-sound="cinema" aria-label="Кинотеатр">
-        <polygon class="hotspot" points="250,290 390,285 410,360 260,370"></polygon>
+      <a href="relax.html" target="_blank" rel="noopener" data-sound="relax" aria-label="Беседка">
+        <rect class="hotspot" x="300" y="650" width="120" height="90" rx="14"></rect>
       </a>
 
-      <!-- РЕЛАКС -->
-      <a href="https://example.com/relax" target="_blank" rel="noopener" data-sound="relax" aria-label="Зона отдыха">
-        <rect class="hotspot" x="520" y="280" width="170" height="95" rx="14"></rect>
+      <a href="fire.html" target="_blank" rel="noopener" data-sound="fire" aria-label="Костёр">
+        <circle class="hotspot" cx="460" cy="720" r="45"></circle>
       </a>
 
-      <!-- КОСТЁР -->
-      <a href="https://example.com/fire" target="_blank" rel="noopener" data-sound="fire" aria-label="Костёр">
-        <polygon class="hotspot" points="1120,620 1210,610 1235,670 1130,685"></polygon>
+      <a href="ducks.html" target="_blank" rel="noopener" data-sound="ducks" aria-label="Палаты">
+        <rect class="hotspot" x="200" y="500" width="160" height="85" rx="14"></rect>
       </a>
 
-      <!-- УТКИ -->
-      <a href="https://example.com/ducks" target="_blank" rel="noopener" data-sound="ducks" aria-label="Утки">
-        <rect class="hotspot" x="140" y="530" width="170" height="95" rx="14"></rect>
-      </a>
-
-      <!-- САНАТОРИЙ (новая локация) -->
-      <a href="https://example.com/sanatorium" target="_blank" rel="noopener" data-sound="sanatorium" aria-label="Санаторий">
-        <!-- Подпись-зона -->
-        <rect class="hotspot" x="1180" y="870" width="300" height="88" rx="16"></rect>
-        <!-- Контур здания -->
-        <polygon class="hotspot" points="1205,780 1335,770 1370,845 1215,880"></polygon>
+      <!-- новая локация -->
+      <a href="sanatorium.html" target="_blank" rel="noopener" data-sound="sanatorium" aria-label="Санаторий">
+        <rect class="hotspot" x="700" y="520" width="210" height="100" rx="14"></rect>
       </a>
     </svg>
   </div>
 
-  <footer>Наведите на зону и кликните — откроется описание, прозвучит короткий звук.</footer>
+  <footer>Кликните по зданию — откроется страница и прозвучит короткий звук.</footer>
 </div>
 
 <script>
-/* ===== АУДИО: имена файлов подставьте свои при необходимости ===== */
 const soundFiles = {
   kitchen:    'kitchen.mp3',
   sport:      'sport.mp3',
-  disco:      'tell.mp3',
+  disco:      'disco.mp3',
   rooms:      'rooms.mp3',
-  birds:      'birds.mp3',
   cinema:     'cinema.mp3',
   relax:      'relax.mp3',
   fire:       'fire.mp3',
@@ -104,7 +80,6 @@ const soundFiles = {
   sanatorium: 'sanatorium.mp3'
 };
 
-// Предзагрузка аудио
 const sounds = {};
 for (const [key, file] of Object.entries(soundFiles)) {
   const a = new Audio(file);
@@ -112,7 +87,6 @@ for (const [key, file] of Object.entries(soundFiles)) {
   sounds[key] = a;
 }
 
-// Проигрываем до 3 секунд при клике по зоне (ссылка откроется в новой вкладке)
 document.querySelectorAll('svg a[data-sound]').forEach(a=>{
   a.addEventListener('click', ()=>{
     const key = a.getAttribute('data-sound');
